# mumble

rust/: Cargo.toml  build.rs
rust/docs/: comparison.md  config_guide.md  todo.md
rust/src/: client.rs  error.rs  lib.rs  proto.rs
rust/tests/: integration_test.rs
src/mumble/: CMakeLists.txt  ConnectDialog.cpp  MainWindow.cpp  Messages.cpp  ServerHandler.cpp  ServerHandler.h  WebSocketConnection.cpp  WebSocketConnection.h
