[package]
name = "mumble-client"
version = "0.1.0"
edition = "2021"
description = "A Rust client library for the Mumble voice chat protocol (TCP/TLS)"
license = "BSD-3-Clause"
repository = "https://github.com/mumble-voip/mumble"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23" }
rustls-pemfile = "2"
webpki-roots = "0.26"
prost = "0.13"
bytes = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
rustls = { version = "0.23" }
rcgen = "0.13"

[build-dependencies]
prost-build = "0.13"
